--- a/index.html
+++ b/index.html
@@ -21,28 +21,36 @@
         <h1 class="header__title">Lib for books</h1>
         </a>
     </header>
-    <section class="list">
-        <h2 class="list__title">My Books</h2>
-        <div class="list__container">
-            
-        </div>
-    </section>
+    <main class="main">
+        <section class="list">
+            <h2 class="list__title">My Books</h2>
+            <div class="list__container">
+                
+            </div>
+        </section>
+    </main>
     <section class="form">
         <div class="form__wrapper">
         <h2 class="form__title">Add new Book!</h2>
-        <form action="#" class="books">
+        <form action="#" class="form__books">
             <label for="title">Title:</label>
             <input type="text" class="books__title" id="title" required>
             <label for="author">Author:</label>
             <input type="text" class="books__author" id="author" required>
             <label for="pages">Pages Number:</label>
             <input type="number" class="books__pages" id="pages" required>
-            <label for="readed">Have you read it?</label>
-            <input type="checkbox" class="books__readed" name="isRead" id="readed">
-            <input type="submit" value="Add">
+            <div class="form__books__wrapper-readed">
+                <label for="readed">Have you read it?</label>
+                <input type="checkbox" class="books__readed" name="isRead" id="readed">
+            </div>
+            <input class="btn" type="submit" value="Add">
         </form>
         </div>
     </section>
     <button class="addBook">+</button>
+    <div class="overlay"></div>
+    <footer class="footer">
+            <p class="footer__person">Made with ❤️ by <a href="https://github.com/DawidBal" target="_blank" class="footer__link">Dave</a> </p>
+    </footer>
 </body>
 </html>
