style: tweak values

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="c-list__container"></div>
         </section>
     </main>
+    <button class="c-addBook">+</button>
     <section class="c-form">
         <div class="c-form__wrapper l-flexCenterCol">
         <h2 class="c-form__heading">Add a new Book!</h2>
@@ -37,7 +38,7 @@
             <input type="text" class="c-form__author" id="author" required>
             <label for="pages">Pages Number:</label>
             <input type="number" class="c-form__pages" id="pages" required>
-            <div class="l-flex l-gap">
+            <div class="l-flex-align l-gap">
                 <label for="readed">Have you read it?</label>
                 <input type="checkbox" class="c-form__readed" name="isRead" id="readed">
             </div>
@@ -45,7 +46,6 @@
         </form>
         </div>
     </section>
-    <button class="c-addBook">+</button>
     <div class="l-overlay"></div>
     <footer class="c-footer">
             <p class="c-footer__person">Made with ❤️ by <a href="https://github.com/DawidBal" target="_blank" class="c-footer__link">Dave</a> </p>
