fix: add min pages in book

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <label for="author">Author:</label>
             <input type="text" class="c-form__author" id="author" required>
             <label for="pages">Pages Number:</label>
-            <input type="number" class="c-form__pages" id="pages" required>
+            <input type="number" class="c-form__pages" id="pages" required min="1">
             <div class="l-flex-align l-gap">
                 <label for="readed">Have you read it?</label>
                 <input type="checkbox" class="c-form__readed" name="isRead" id="readed">
