--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <input type="text" class="c-form__author" id="author" required>
             <label for="pages">Pages Number:</label>
             <input type="number" class="c-form__pages" id="pages" required min="1">
+            <label for="description">Description:</label>
+            <textarea name="desc" id="description" cols="30" rows="10"></textarea>
             <div class="l-flex-align l-gap">
                 <label for="readed">Have you read it?</label>
                 <input type="checkbox" class="c-form__readed" name="isRead" id="readed">
